FE: Fixing Team Pictures on Firefox

--- a/frontend/src/pages/home/Home.scss
+++ b/frontend/src/pages/home/Home.scss
@@ -344,7 +344,7 @@
 						position: absolute;
 						transition: inherit;
 						width: 100%;
-						z-index: -1;
+						z-index: 0;
 					}
 
 					h1 {
